<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/buttons"
        style="@style/ButtonsLayout">

        <Button
            android:id="@+id/songsButton"
            style="@style/Buttons"
            android:text="@string/category_songs" />

        <Button
            android:id="@+id/artistsButton"
            style="@style/Buttons"
            android:text="@string/category_artists" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playlist_one_name"
                style="@style/ItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playlist_one" />

            <TextView
                android:id="@+id/playlist_one_mode"
                style="@style/ItemSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode_two" />

            <TextView
                android:id="@+id/playlist_two_name"
                style="@style/ItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playlist_two" />

            <TextView
                android:id="@+id/playlist_two_mode"
                style="@style/ItemSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode_one" />

            <TextView
                android:id="@+id/playlist_three_name"
                style="@style/ItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playlist_three" />

            <TextView
                android:id="@+id/playlist_three_mode"
                style="@style/ItemSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode_two" />

            <TextView
                android:id="@+id/playlist_four_name"
                style="@style/ItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playlist_four" />

            <TextView
                android:id="@+id/playlist_four_mode"
                style="@style/ItemSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode_two" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>