<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructureappv2.MainActivity">


    <TextView
        android:id="@+id/playLists"
        style="@style/Category"
        android:background="@color/category"
        android:drawableLeft="@drawable/ic_playlist"
        android:text="@string/category_playlists" />

    <TextView
        android:id="@+id/songs"
        style="@style/Category"
        android:background="@color/category"
        android:drawableLeft="@drawable/ic_song"
        android:text="@string/category_songs" />

    <TextView
        android:id="@+id/artists"
        style="@style/Category"
        android:background="@color/category"
        android:drawableLeft="@drawable/ic_artist"
        android:text="@string/category_artists" />




</LinearLayout>
