<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/buttons"
        style="@style/ButtonsLayout">

        <Button
            android:id="@+id/playlistsButton"
            android:text="@string/category_playlists"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/artistsButton"
            android:text="@string/category_artists"
            style="@style/Buttons"/>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/song_one_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:scaleType="centerInside"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/queen" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toRightOf="@id/song_one_icon">

                    <TextView
                        android:id="@+id/song_one_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ItemName"
                        android:text="I want it all"/>

                    <TextView
                        android:id="@+id/artist_one_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ItemSecondary"
                        android:text="Queen"/>

                    <TextView
                        android:id="@+id/album_one_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ItemSecondary"
                        android:text="The Miracle"/>

                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_play_circle_filled_black_48dp"
                        android:gravity="center"
                        android:paddingBottom="2dp"
                        android:paddingTop="2dp"
                        android:text="@string/play_song" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/song_two_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:scaleType="centerInside"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/bruno_mars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toRightOf="@id/song_two_icon">

                    <TextView
                        android:id="@+id/song_two_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ItemName"
                        android:text="24K Magic"/>

                    <TextView
                        android:id="@+id/artist_two_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ItemSecondary"
                        android:text="Bruno Mars"/>

                    <TextView
                        android:id="@+id/album_two_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ItemSecondary"
                        android:text="24K Magic"/>

                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_play_circle_filled_black_48dp"
                        android:gravity="center"
                        android:paddingBottom="2dp"
                        android:paddingTop="2dp"
                        android:text="@string/play_song" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/song_three_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:scaleType="centerInside"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/jacko" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toRightOf="@id/song_three_icon">

                    <TextView
                        android:id="@+id/song_three_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ItemName"
                        android:text="Billie Jean"/>

                    <TextView
                        android:id="@+id/artist_three_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ItemSecondary"
                        android:text="Michael Jackson"/>

                    <TextView
                        android:id="@+id/album_three_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ItemSecondary"
                        android:text="The Essential Michael Jackson"/>

                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_play_circle_filled_black_48dp"
                        android:gravity="center"
                        android:paddingBottom="2dp"
                        android:paddingTop="2dp"
                        android:text="@string/play_song" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/song_four_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:scaleType="centerInside"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/adele" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toRightOf="@id/song_four_icon">

                    <TextView
                        android:id="@+id/song_four_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ItemName"
                        android:text="Rolling in the Deep"/>

                    <TextView
                        android:id="@+id/artist_four_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ItemSecondary"
                        android:text="Michael Jackson"/>

                    <TextView
                        android:id="@+id/album_four_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ItemSecondary"
                        android:text="21"/>

                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_play_circle_filled_black_48dp"
                        android:gravity="center"
                        android:paddingBottom="2dp"
                        android:paddingTop="2dp"
                        android:text="@string/play_song" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>